--- a/FirebaseCloudMessaging/app/src/main/res/menu/main_activity_menu.xml
+++ b/FirebaseCloudMessaging/app/src/main/res/menu/main_activity_menu.xml
@@ -4,6 +4,10 @@
     <item android:id="@+id/get_user_firebase_token"
           android:title="Get user's firebase token"
           app:showAsAction="never" />
+    <item android:id="@+id/menu_stick_app"
+          android:title="Start Sticky Service"
+          app:showAsAction="never"
+        android:checkable="true" />
     <item android:id="@+id/signout_menu"
           android:title="Sign out"
           app:showAsAction="never" />
